feat: package 引用到mian

--- a/应用场景.md
+++ b/应用场景.md
@@ -5,3 +5,31 @@
 3. golang 分布式/云计算软件工程师
 4. 后端服务器应用
 
+## Go语言特性
+
+1. 自动垃圾回收
+2. 更丰富的内置类型
+3. 函数多返回值
+4. 错误处理
+5. 匿名函数和闭包
+6. 类型和接口
+7. 并发编程
+8. 反射
+9. 语言交互性
+
+
+
+总结：简洁，快速，安全，并行，有趣，开源，内存管理，数组安全，编译迅速
+
+对于高性能分布式系统领域而言，go语言无疑比大多数其他语言有着跟高的开发效率，它提供了海量并行的支持，这对于游戏服务端的开发而建再好不过了
+
+
+## Go语言结构
+
+1. 包声明
+2. 引入包
+3. 函数
+4. 变量
+5. 语句&表达式
+6. 注释
+
