--- a/应用场景.md
+++ b/应用场景.md
@@ -33,3 +33,101 @@
 5. 语句&表达式
 6. 注释
 
+
+
+## 关键字
+
+1. break
+2. case
+3. chan
+4. const
+5. continue
+6. defualt
+7. defer
+8. else
+9. falthrough
+10. for
+11. func
+12. interface
+13. select
+14. go
+15. goto
+16. if
+17. map
+18. package
+19. struct
+20. switch
+21. type
+22. range
+23. return
+24. var
+25. import
+
+
+
+## 36个预定义标识符
+
+1. append
+2. bool
+3. byte
+4. cap
+5. copy
+6. false
+7. int32
+8. int64
+9. print
+10. ptintln
+11. real
+12. recover
+13. len
+14. Float 32
+15. float64
+16. close
+17. imag
+18. make
+19. string
+20. complex
+21. complex64
+22. complex128
+23. int
+24. new
+25. true
+26. unit
+27. nil
+28. int8
+29. int16
+30. unit16
+31. unit32
+32. panic
+33. unit64
+34. unitptr
+35. Unit8
+36. iota
+
+
+
+## Go 语言数据类型
+
+1. Go 编程语言中，数据类型用于声明函数和变量
+2. 数据类型的出现是为了吧数据分成所需内存大小不同的数据，编程的时候需要用大数据的时候才需要申请大内存，就可以充分利用内存
+
+
+
+1. 布尔型
+2. 数字类型（整型int 和浮点型 float32，float64，Go语言支持整形和浮点型数字，并切支持复数，其中位的运算采用补码）
+3. 字符串类型（字符串就是一串固定长度的字符链接起来的字符序列，Go的字符串是由单个字符连接起来的，Go语言的字符串的字节使用UTF-8编码标示Unicode文本）
+4. 派生类型( 指针类型，数组类型，结构化类型，channel，函数类型，切片类型，接口类型，map类型)
+
+
+
+## Go语言变量
+
+变量来源于数学，是计算机语言中能储存结算结构或能表示指抽象概念
+
+变量可以通过变量名访问
+
+Go语言变量名有字母，数字，下划线组成，其中首个字符不能为数字
+
+声明变量的一般形式是使用var关键词
+
+
